owncloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  labels:
    app: owncloud
spec:
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: owncloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /var/www/html/config
        - name: data
          mountPath: /var/www/html/data
      volumes:
      - name: config
        hostPath:
          path: %HOST_CONFIG_DIR%
          type: Directory
      - name: data
        hostPath:
          path: %HOST_DATA_DIR%
          type: Directory

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: webhippie/mariadb:latest
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql
        hostPath:
          path: /var/lib/mysql
          type: DirectoryOrCreate
