owncloud/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: owncloud
spec:
  rules:
    - host: cloud.example.com
      http:
        paths:
          - backend:
              serviceName: owncloud
              servicePort: 80
